# zbill

./: .gitignore  README.md  pyproject.toml
.github/workflows/: jekyll-pages.yml
docs/: Gemfile  _config.yml  index.md
docs/_includes/: head-custom.html
docs/assets/: main.scss
docs/assets/css/: zbill.css
src/zbills/: __init__.py  __main__.py  cli.py  discovery.py  html_report.py  metrics.py  models.py  report.py  rules.py  run_id.py
src/zbills/analyzer/: __init__.py  heuristic_analyzer.py  pipeline.py  python_analyzer.py
src/zbills/llm/: __init__.py  config.py  enrich.py  providers.py  runtime.py
tests/: test_enrich_parse.py  test_metrics.py  test_rules.py
